# proportion-tests

./: .gitignore  .markdownlint.yml  AGENTS.md  LICENSE  README.md  benchmark.md  benchmark.py  benchmark.toml  config.toml  main.py  proportion-tests.toml  pyproject.toml  results.md  simulation.md  simulation.py  simulation.toml  stat_tests.md  stat_tests.py  stat_tests.toml  utils.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  markdownlint.yml  md.yml
reports/: benchmark.md  simulation.md
src/proportion_tests/: benchmark.py  config.py  data.py  render.py  simulation.py  utils.py
