[project]
name = "proportion-tests"
version = "0.1.0"
description = "Comparison of two-sample proportion tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["polars", "tea_tasting>=1.13", "tqdm"]

[project.scripts]
benchmark = "proportion_tests.benchmark:main"
simulation = "proportion_tests.simulation:main"

[dependency-groups]
dev = ["ruff", "ty"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "A", "ANN", "ARG", "B", "C4", "C90", "COM", "E", "F", "ERA", "FA", "FLY", "FURB",
    "I", "ICN", "INP", "INT", "ISC", "N", "NPY", "PERF", "PGH", "PIE", "PL", "Q", "RET",
    "RSE", "RUF", "S", "SIM", "SLF", "TC", "TID", "TRY", "UP", "W",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 10

[tool.poe.tasks]
markdownlint = 'markdownlint-cli2 "*.md"'
reset = [
    { cmd = "git fetch origin main" },
    { cmd = "git switch dev" },
    { cmd = "git reset --hard origin/main" },
    { cmd = "git push --force-with-lease" },
]
upgrade = "uv sync --all-groups --upgrade"


[tool.proportion_tests]
rng = 42
samples = { small = 100, medium = 1000, large = 10_000 }

[tool.proportion_tests.benchmark]
repeat = 10  # Number of separate timing repeats
number = 10  # Number of times the statement is executed in one timing repeat
output = "reports/benchmark.md"

[tool.proportion_tests.simulation]
n_simulations = 10_000
alpha = 0.05
power = 0.8
options = [
    { name = "balanced ratio, balanced proportion", ratio = 1, prop = 0.5 },
    { name = "balanced ratio, imbalanced proportion", ratio = 1, prop = 0.1 },
    { name = "imbalanced ratio, balanced proportion", ratio = 0.25, prop = 0.5 },
    { name = "imbalanced ratio, imbalanced proportion", ratio = 0.25, prop = 0.1 },
]
output = "reports/simulation.md"

[[tool.proportion_tests.tests]]
name = "barnard"
path = "tea_tasting.Proportion"
kwargs = { method = "barnard", equal_var = true }
max_simulation_size = 100
max_benchmark_size = 1000

[[tool.proportion_tests.tests]]
name = "barnard unpooled"
path = "tea_tasting.Proportion"
kwargs = { method = "barnard", equal_var = false }
max_simulation_size = 100
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "boschloo"
path = "tea_tasting.Proportion"
kwargs = { method = "boschloo" }
max_simulation_size = 100
max_benchmark_size = 1000

[[tool.proportion_tests.tests]]
name = "fisher"
path = "tea_tasting.Proportion"
kwargs = { method = "fisher" }
max_simulation_size = 1000
max_benchmark_size = 10000

[[tool.proportion_tests.tests]]
name = "log-likelihood"
path = "tea_tasting.Proportion"
kwargs = { method = "log-likelihood", correction = false }
max_simulation_size = inf  # No limit
max_benchmark_size = inf  # No limit

[[tool.proportion_tests.tests]]
name = "log-likelihood cc"
path = "tea_tasting.Proportion"
kwargs = { method = "log-likelihood", correction = true }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "pearson"
path = "tea_tasting.Proportion"
kwargs = { method = "pearson", correction = false }
max_simulation_size = inf  # No limit
max_benchmark_size = inf  # No limit

[[tool.proportion_tests.tests]]
name = "pearson cc"
path = "tea_tasting.Proportion"
kwargs = { method = "pearson", correction = true }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "norm"
path = "tea_tasting.Proportion"
kwargs = { method = "norm", correction = false, equal_var = true }
max_simulation_size = inf  # No limit
max_benchmark_size = inf  # No limit

[[tool.proportion_tests.tests]]
name = "norm unpooled"
path = "tea_tasting.Proportion"
kwargs = { method = "norm", correction = false, equal_var = false }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "norm cc"
path = "tea_tasting.Proportion"
kwargs = { method = "norm", correction = true, equal_var = true }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "norm unpooled cc"
path = "tea_tasting.Proportion"
kwargs = { method = "norm", correction = true, equal_var = false }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "mean z-test"
path = "tea_tasting.Mean"
kwargs = { use_t = false, equal_var = true }
max_simulation_size = inf  # No limit
max_benchmark_size = inf  # No limit

[[tool.proportion_tests.tests]]
name = "mean z-test unpooled"
path = "tea_tasting.Mean"
kwargs = { use_t = false, equal_var = false }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark

[[tool.proportion_tests.tests]]
name = "mean t-test"
path = "tea_tasting.Mean"
kwargs = { use_t = true, equal_var = true }
max_simulation_size = inf  # No limit
max_benchmark_size = inf  # No limit

[[tool.proportion_tests.tests]]
name = "mean t-test unpooled"
path = "tea_tasting.Mean"
kwargs = { use_t = true, equal_var = false }
max_simulation_size = inf  # No limit
max_benchmark_size = 0  # Exclude from benchmark
