[project]
name = "proportion-tests"
version = "0.1.0"
description = "Comparison of two-sample proportion tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy", "polars", "scipy", "tea_tasting>=1.13", "tqdm"]

[project.scripts]
benchmark = "proportion_tests.benchmark:main"
simulation = "proportion_tests.simulation:main"

[dependency-groups]
dev = ["ruff", "ty"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "A", "ANN", "ARG", "B", "C4", "C90", "COM", "E", "F", "ERA", "FA", "FLY", "FURB",
    "I", "ICN", "INP", "INT", "ISC", "N", "NPY", "PERF", "PGH", "PIE", "PL", "Q", "RET",
    "RSE", "RUF", "S", "SIM", "SLF", "TC", "TID", "TRY", "UP", "W",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 10

[tool.tombi]
schema.strict = false

[tool.poe.tasks]
markdownlint = 'markdownlint-cli2 "*.md"'
reset = [
    { cmd = "git fetch origin main" },
    { cmd = "git switch dev" },
    { cmd = "git reset --hard origin/main" },
    { cmd = "git push --force-with-lease" },
]
upgrade = "uv sync --all-groups --upgrade"
